--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha test --exit",
     "dev": "nodemon server.js",
     "start": "node server.js"
   },
@@ -14,9 +14,22 @@
     "nodemon": "^2.0.3"
   },
   "dependencies": {
+    "admin-bro": "^2.2.5",
+    "admin-bro-expressjs": "^2.0.4",
+    "admin-bro-mongoose": "^0.5.1",
+    "bcrypt": "^4.0.1",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "chai-subset": "^1.6.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.9.9"
+    "express-formidable": "^1.2.0",
+    "express-session": "^1.17.1",
+    "mocha": "^7.1.1",
+    "mongoose": "^5.9.9",
+    "mongoose-paginate": "^5.0.3",
+    "mongoose-paginate-v2": "^1.3.9"
   }
 }
